--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <textarea id="tweet" spellcheck="true" style="height: 80px; padding:8px; width: 682px; position:relative;"></textarea>
 <script>
-$('#tweet').jqEasyCounter();
+$('#tweet').jqEasyTwitterCounter();
 </script>
 </body>
 </html>
